force-app/main/default/objects/Attendance_Queue_Item__c/Attendance_Queue_Item__c.object-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <label>Attendance_Queue_Item</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Attendance_Queue_Item_Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance_Queue_Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>