force-app/main/default/objects/Attendance_Queue_Item__c/fields/Name__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>