force-app/main/default/objects/Attendance_Queue_Item__c/fields/Participant_Email__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Participant_Email__c</fullName>
    <label>Participant Email</label>
    <type>Email</type>
</CustomField>